manifests/applications/spenn/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/match-tag: 'true'
    keel.sh/policy: force
    keel.sh/trigger: poll
  name: app
  namespace: spenn
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ghcr.io/bakseter/spenn:latest
          ports:
            - containerPort: 8080
