manifests/applications/spenn/database-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: spenn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  serviceName: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:17-alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              mountPropagation: None
              name: postgres-data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: database
      securityContext:
        seccompProfile:
          type: RuntimeDefault
