manifests/applications/spenn/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: spenn
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app
  type: ClusterIP
