manifests/applications/spenn/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
#   traefik.ingress.kubernetes.io/router.middlewares: "oauth2-proxy-forwardauth@kubernetescrd"
  name: spenn
  namespace: spenn
spec:
  ingressClassName: traefik
  rules:
  - host: spenn.bakseter.net
    http:
      paths:
      - backend:
          service:
            name: app
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - spenn.bakseter.net
    secretName: ingress-tls
